2004-11-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/defs/libgnomecanvas.defs: Remove type defs.  Include
	libgnomecanvas-types.defs.

2004-11-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/defs/glib.defs: Bugfix: include overrides after types.

2004-11-09  Andy Wingo  <wingo@pobox.com>

	* gnome/defs/gdk.defs (type-overrides): Added here -- not setting
	up generation for gdk right now, I don't have the time.
	(draw_rectangle): `filled' param is a boolean.

2004-10-28  Andy Wingo  <wingo@pobox.com>

	* Makefile.am (all-local): Versioned pkg-config files.

2004-10-16  Andy Wingo  <wingo@pobox.com>

	* gnome/defs/Makefile.am: Integrate with common.mk.

2004-10-14  Andy Wingo  <wingo@pobox.com>

	* gnome/defs/ui.defs, gnome/defs/ui-types.defs: Generated.

	* gnome/defs/Makefile.am (guilemodule_DATA): Added ui-types.defs.
	(gnome-ui): Added target for generating gnome-ui defs.

2004-10-10  Andy Wingo  <wingo@pobox.com>

	* gnome/defs/gconf.defs: Regenerated.

	* gnome/defs/gconf-types.defs: Added.

	* gnome/defs/Makefile.am (guilemodule_DATA): Added
	gconf-types.defs and a target for generating gconf defs.

2004-10-09  Andy Wingo  <wingo@pobox.com>

	* gnome/defs/gnome-vfs.defs: 
	* gnome/defs/gnome-vfs-types.defs: New files.

	* gnome/defs/Makefile.am: Added a target to generate the gnome-vfs
	defs, and added them to the dist/install list.

2004-10-07  Andy Wingo  <wingo@pobox.com>

	* gnome/defs/gtk.defs, gnome/defs/gtk-types.defs: Regenerated.
	There is nothing hand-tuned here any more.

	* gnome/defs/Makefile.am (gtk): Add target for autogenning gtk
	defs.

	* tools/diff-to-overrides: New tool, takes a diff from a
	hand-tuned defs to a generated defs and generates suitable
	overrides. Used to help refactoring defs so the main defs can be
	autogenerated.

2004-10-06  Andy Wingo  <wingo@pobox.com>

	* gnome/defs/Makefile.am (gdk-pixbuf): Whoops, it's `include', not
	`import'. Only pull in gdk-pixbuf*.h (i.e., not gdk-pixdata.h).
