@@ -2,47 +2,7 @@ include $(top_srcdir)/common.mk
 
 defsdir = $(guilemoduledir)/defs
 
-defs_DATA = 					\
-        applet.defs				\
-	art.defs				\
-	atk.defs				\
-	atk-types.defs				\
-	bonobo.defs				\
-	bonobo-types.defs			\
-	bonoboui.defs				\
-	bonoboui-types.defs			\
-	common-ignores.defs			\
-	gconf.defs				\
-	gconf-types.defs			\
-	gdk.defs				\
-	gdk-types.defs				\
-	gdk-pixbuf.defs				\
-	gdk-pixbuf-types.defs			\
-	glib.defs				\
-	glib-types.defs 			\
-	gnome.defs				\
-	gnome-vfs.defs				\
-	gnome-vfs-types.defs			\
-	gtk.defs				\
-	gtk-extrafuncs.defs			\
-	gtk-types.defs				\
-	gtkhtml2.defs				\
-	gtksourceview.defs			\
-	libgda.defs 				\
-	libgda-types.defs			\
-	libglade.defs				\
-	libgnomecanvas.defs			\
-	Makefile.am				\
-	nautilus.defs				\
-	pango.defs				\
-	pango-types.defs			\
-	print.defs				\
-	printui.defs				\
-	ui.defs					\
-	ui-types.defs				\
-	vte.defs				\
-	libwnck.defs				\
-	libwnck-types.defs
+defs_DATA = $(wildcard *.defs)
 
 EXTRA_DIST = $(defs_DATA)
 
