@@ -1,3 +1,8 @@
+2004-11-16  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/defs/Makefile.am (defs_DATA): Just do *.defs, to prevent
+	bugs.
+
 2004-11-14  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* gnome/defs/libgnomecanvas.defs: Remove type defs.  Include
